# pydata-london-2026-sql

./: .gitignore  README.md  main.py  pyproject.toml  questions.txt
agents/: shared.py
agents/analyst/: agent.py
agents/intent_validator/: agent.py  prompts.py
agents/sql_generator/: agent.py  prompts.py
agents/sql_validator/: agent.py
alembic/: env.py
alembic/versions/: 0c905a4675b1_relationships_update.py  ba93b0130119_initial_migration.py
app/: app.py
app/dependencies/: convertors.py  state.py
app/routes/: __init__.py  chat.py  semantic.py
data/: seed.py
db/: client.py  test_client.py  url_utils.py
models/: __init__.py  account_product_map.py  accounts.py  customer_account_map.py  customers.py  products.py  transaction_category.py  transactions.py
routes/: __init__.py  chat.py  semantic.py
schema/: create_ddl.py
schema/sql/: schema.sql
utils/: logger.py
workflows/: context.py  steps.py
workflows/chat/: workflow.py
workflows/query/: execute.py  serialiser.py
