[project]
name = "pydata-london-2026-sql"
version = "0.1.0"
description = "Sample implementation of a semantic layer using semantido"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai==1.104.0",
    "semantido==0.2.1",
    "sqlalchemy==2.0.50",
    "fastapi==0.136.3",
    "alembic==1.18.4",
    "python-dotenv==1.2.2"
]

[dependency-groups]
dev = [
    "ruff==0.15.15"
]